# polymarket-quant-lab

./: .gitignore  LICENSE  README.md  WARP.md  pyproject.toml
.github/workflows/: ci.yml
config/: discovered_pairs.yml  pairs.yml  statarb_best.yml  statarb_grid.yml
exports/: coverage_2026-01-01.json  coverage_2026-01-02.json  daemon_summary_2026-01-01.md  daemon_summary_2026-01-02.md  eval_7eb013e1_20251231_035113.md  eval_c83988eb_20251231_042257.md  eval_c83988eb_20251231_042314.json  ticks_2026-01-01.csv  ticks_2026-01-02.csv
results/: tuning_results.csv
src/pmq/: __init__.py  cli.py  config.py  gamma_client.py  logging.py  models.py
src/pmq/auth/: __init__.py  client_factory.py  creds.py  kalshi_creds.py  redact.py
src/pmq/backtest/: __init__.py  engine.py  metrics.py  runner.py
src/pmq/evaluation/: __init__.py  pipeline.py  reporter.py
src/pmq/exchange/: __init__.py  factory.py  protocols.py  types.py
src/pmq/governance/: __init__.py  risk_gate.py  scorecard.py
src/pmq/markets/: __init__.py  orderbook.py  wss_market.py
src/pmq/ops/: __init__.py  daemon.py  drift.py  edge_calc.py  live_exec.py  (+6 more)
tests/: __init__.py  test_approval_ttl.py  test_auth.py  test_backtest.py  test_contiguous_windows.py  test_costs_constraints.py  test_drift.py  test_edge_calc.py  test_eval_realism.py  test_eval_walkforward.py  test_evaluation.py  test_gamma_client.py  test_governance.py  test_live_exec.py  test_market_constraints.py  test_microstructure.py  test_ops_daemon.py  test_order_lifecycle.py  test_paper_exec.py  test_paper_ledger.py  test_quality.py  test_quality_window_alignment.py  test_rest_resilience.py  test_seed_taxonomy.py  test_signals.py  test_statarb.py  test_web_and_export.py  test_wss_market.py  test_zscore.py
tests/exchange/: test_kalshi_mappers.py  test_types.py
(+31 files in other folders)
