[tool.poetry]
name = "pmq"
version = "0.1.0"
description = "Polymarket Quant Lab - Market data ingestion, paper trading, and signal detection"
authors = ["yosiwizman"]
readme = "README.md"
license = "MIT"
packages = [{include = "pmq", from = "src"}]

[tool.poetry.dependencies]
python = "^3.11"
httpx = "^0.28.0"
pydantic = "^2.10.0"
pydantic-settings = "^2.7.0"
typer = {extras = ["all"], version = "^0.15.0"}
pyyaml = "^6.0.2"

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.0"
pytest-asyncio = "^0.25.0"
pytest-cov = "^6.0.0"
ruff = "^0.8.0"
mypy = "^1.13.0"
types-pyyaml = "^6.0.12"

[tool.poetry.scripts]
pmq = "pmq.cli:app"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
target-version = "py312"
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "ARG",    # flake8-unused-arguments
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B008",   # do not perform function calls in argument defaults (needed for Typer)
]

[tool.ruff.lint.isort]
known-first-party = ["pmq"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_ignores = true
disallow_untyped_defs = true
plugins = ["pydantic.mypy"]

[[tool.mypy.overrides]]
module = ["tests.*"]
disallow_untyped_defs = false

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
addopts = "-v --tb=short"
